Fixes and adjustments for the chat-minimal chat skin:
 - show the fullscreen button, very useful on devices with little screen real estate
 - display on the same line, in respective order, avatar (when enabled), user name and link, timestamp and message
 - wrap the message over multiple lines when it would not fit

--- a/www/resources/chat-skins/chat-minimal.css
+++ b/www/resources/chat-skins/chat-minimal.css
@@ -26,6 +26,20 @@
     background-color: white;
 }
 
+#xowiki-chat-fs {
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
+    display: flex;
+    background-color: white;
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 1031;
+}
+
 /* Users block */
 #xowiki-chat-users {
     display: none;
@@ -56,7 +70,6 @@
 
 #xowiki-chat-messages .xowiki-chat-user {
     white-space: nowrap;
-    display: block;
     padding: 5px;
     font-weight: bold;
 }
@@ -72,8 +85,10 @@
     padding: 5px;
 }
 
-#xowiki-chat-messages .xowiki-chat-message-block {
+#xowiki-chat-messages .xowiki-chat-message-block,
+#xowiki-chat-messages .xowiki-chat-message-block-me {
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     padding: 5px;
 }
@@ -115,6 +130,8 @@
     background-color: #eceff1;
     border-radius: 8px;
     padding-right: 45px;
+    width: 100%; /* Do not let the browser set a "natural" content size for this
+                    element, so that flex can always shrink/enlarge it as needed */
     min-width: 0; /* Avoid overlapping when screen width is very small */
 }
 
@@ -140,4 +157,20 @@
     margin: auto;
     stroke: white;
     fill: none;
+}
+
+/* Full screen trigger */
+.xowiki-chat-trigger-fs-block {
+    min-width: 0; /* Avoid overlapping when screen width is very small */
+}
+
+.xowiki-chat-trigger-fs-pic {
+    width: 40px;
+    height: 40px;
+    fill: #b3b3b3;
+}
+
+.xowiki-chat-trigger-fs-pic:hover {
+    background-color: white;
+    border: 1px solid white;
 }
